inc/css/style.css
/* ... */
@media( min-width: 801px ) and ( max-width: 1169px ){
    #site-navigation.main-navigation li a{
        font-size: 13px;
    }
}
@media( max-width : 801px ){
    .site-title{
        margin-left: 0;
    }
    #site-cta{
        position: initial;
        top: 0;
        margin-bottom: 0;
        width: 100%;
    }
    .site-content-wrapper{
    }
    #site-navigation{
        display: none;
    }

    #site-toolbar{
        display: none;
    }
    .site-branding{
        top: 0;
    } 
    .site-branding .col-xs-3{
        width: 100%;
        text-align: center;
        padding: 0;
    }    
    .site-branding .menu-bar,
    .site-branding .search-bar{
        display: none;
    }
    .col4{
        width: 100%;
    }
    .site-cta{
        margin-bottom: 15px;
    }
    #site-cta .col4.mid{
        margin-left: 0;
        margin-right: 0;
    }
    #site-cta .col4.mid{
        margin-bottom: 15px;
    }
    #site-cta{
        margin: 0px;
    }
}
@media ( min-width: 601px ) and ( max-width: 800px ){
    
}
@media ( max-width: 601px ){
    #site-cta .main-heading{
        font-size: 28px;
        line-height: 30px;
    }
    .sc-slider-wrapper .camera_caption{
        font-size: 14px;
        line-height: 14px;
    }

    .item-post{
        width: 49%;
    }
    #sc-slider-banner{
       
    }
    #sc-slider-banner .sc-slider-banner{
        
    }    
    #sc-slider-banner h2{
        font-size: 22px;
        line-height: 28px;
    }
    #sc-slider-banner p{
        font-size: 16px;
        line-height: 22px;
    }
   
}
@media only screen and (min-device-width : 320px) and (max-device-width : 480px) { 
    #sc-slider-banner h2{
        font-size: 22px;
        line-height: 24px;
    }
    #sc-slider-banner{
        max-height: 150px;
        padding: 10px;
    }
    #sc-slider-banner .button-primary{
        font-size: 12px;
        padding: 0px 5px;
        height: 20px;
        line-height: 20px;
        margin-bottom: 10px;
    }
    .sc-slider-wrapper .camera_caption{
        bottom: 84px;
        bottom: 150px;
    }
    .sc-slider-wrapper .camera_caption > div span{
        font-size: 18px;
        line-height: 20px;
    }
    .camera_pag{ display: none}
}

.mb20{ margin-bottom: 20px;}
.mt20{ margin-bottom: 20px;}
.bs_nopad{ padding: 0}

#byblos-page-jumbotron{
    width: 100%;
    background-size: cover;
    height: 400px;
    overflow: hidden;
    background: rgba( 0,0,0,0.15 );
    box-shadow: 1px 1px 5px #000;
    -moz-box-shadow: 1px 1px 5px #000;
    -webkit-box-shadow: 1px 1px 5px #000;
    position: relative;
    z-index: 2;
}

#byblos-page-jumbotron .entry-title{
    margin-top: 150px;
    text-align: center;
    color: #fff;
    font-size: 46px;
    z-index: 999;
    position: relative;
    text-shadow: 1px 2px rgb(51, 51, 51);
}

.parallax-window {

}

.parallax-mirror{
    z-index: 1 !important;
}

